# ai-agent-tts

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  LICENSE  OVERVIEW.md  QUICK_START.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  script_evaluation_type_A.md
.github/: README.md
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md  basic_dialog.py  custom_fsm.py  custom_prompts.py
scripts/: README.md  check_models.py  check_vllm.py  dialog_scenarios.yaml  download_models.py  download_qwen_model.py  health_check.py  setup_env.sh  simulate_dialog.py  start_services.sh  test_dialog_performance.py  test_dialog_simulator.py  test_f5_tts_latency.py  test_quick.py  test_system.py  test_voice_chat.py  test_vram_stress.py
src/asr_gateway/: README.md  __init__.py  config.yaml  main.py  streaming.py
src/freeswitch_bridge/: README.md  __init__.py  config.yaml  main.py
src/llm_service/: README.md  __init__.py  config.yaml  main.py
src/notifier/: README.md  __init__.py  config.yaml  formatter.py  sheets_client.py
src/policy_engine/: README.md  __init__.py  config.yaml  fsm.py  main.py  prompts.py  slots.py
src/shared/: __init__.py  config_loader.py  health.py  logging_config.py  metrics.py  vad_detector.py
src/tts_gateway/: KOKORO.md  README.md  __init__.py  config.yaml  f5_tts_engine.py  f5_tts_utils.py  main.py  prerender.py  streaming.py  text_preprocessing.py
tests/: README.md  __init__.py  conftest.py  test_config_loader.py  test_fsm.py  test_health.py  test_slots.py
