[project]
name = "ai-agent-tts"
version = "0.1.0"
description = "Low-latency voice AI agent platform with streaming ASR/TTS and FSM-based dialog management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aleksandr Mordvinov", email = ""}
]
keywords = [
    "voice-ai",
    "speech-recognition",
    "text-to-speech",
    "conversational-ai",
    "low-latency",
    "streaming-asr",
    "fsm",
    "langgraph",
    "vllm",
    "fastapi",
    "microservices",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Telephony",
]

dependencies = [
    # Core
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "uvloop==0.21.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    # ASR
    "realtimestt==0.3.5",
    "faster-whisper==1.0.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    # VAD
    "silero-vad==5.1",
    # LLM Client (OpenAI-compatible для vLLM)
    "openai==1.54.0",
    # TTS
    "onnxruntime-gpu==1.20.1",
    "misaki[en]>=0.1.0",
    "f5-tts>=0.1.0",
    "ruaccent>=1.0.0",
    # Policy & FSM
    "langgraph==0.2.45",
    "langchain==0.3.7",
    "langchain-core>=0.3.17,<0.4.0",
    "langchain-openai==0.2.9",
    # Google Sheets
    "gspread>=6.0.0,<6.1.0",
    "google-auth==2.36.0",
    "gspread-asyncio==2.0.0",
    # Network & Async
    "aiohttp==3.11.7",
    "websockets==12.0",
    "httpx==0.28.0",
    # Utils
    "tenacity==9.0.0",
    "redis==5.2.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    # Monitoring
    "opentelemetry-api==1.28.2",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-instrumentation-fastapi==0.49b2",
    "opentelemetry-exporter-otlp==1.28.2",
    "prometheus-client>=0.20.0",
    # Audio Processing
    "soundfile==0.12.1",
    "numpy>=1.26.0,<2.0.0",
    "librosa==0.10.2.post1",
    "sounddevice==0.5.1",
    # System Monitoring
    "psutil==6.1.0",
    "gputil==1.4.0",
    # vLLM (для download_models.py)
    "huggingface-hub==0.26.2",
    # Type stubs
    "types-pyyaml==6.0.12.20240917",
    "types-redis==4.6.0.20241004",
    "vllm>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
    "codespell>=2.2.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and assert in tests
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
exclude = [
    "venv",
    ".venv",
    "**/__pycache__",
    "tests",
    "build",
    "dist",
]
include = [
    "src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

